--- a/estoka/estoka/src/app/globals.css
+++ b/estoka/estoka/src/app/globals.css
@@ -1,12 +1,5 @@
 @import "tailwindcss";
 
-@theme inline {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
-}
-
 body {
   margin: 0;
   font-family: 'Gabarito', sans-serif;
@@ -52,4 +45,9 @@ body {
 .content {
   flex: 1;
   padding: 2rem;
+}
+
+:root {
+  --color-primary: #00b4b2;
+  --color-secondary: #53281C;
 }
